--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.15.3",
     "clsx": "^2.0.0",
+    "dexie": "^4.0.4",
+    "dexie-react-hooks": "^1.1.7",
+    "flowbite": "^2.3.0",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
