--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "dexie": "^4.0.4",
     "dexie-react-hooks": "^1.1.7",
     "flowbite": "^2.3.0",
+    "flowbite-react": "0.9.0",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -54,7 +55,7 @@
     "next-router-mock": "^0.9.0",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.32",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^4.9.5"
