--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "0.9.0",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
+    "radash": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
